--- a/package.json
+++ b/package.json
@@ -15,33 +15,36 @@
     "@faker-js/faker": "^8.4.1",
     "lesca-click": "^4.3.5",
     "lesca-fetcher": "^1.1.7",
-    "lesca-react-onload": "^1.0.17",
+    "lesca-react-onload": "^1.0.18",
     "lesca-use-tween": "^3.0.8",
+    "matter-js": "^0.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-loading": "^2.0.3",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
+    "@types/matter-js": "^0.19.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.10.0",
-    "@typescript-eslint/parser": "^7.10.0",
-    "@vitejs/plugin-react": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "devcert": "^1.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-react-refresh": "^0.4.8",
     "gh-pages": "^6.1.1",
     "less": "^4.2.0",
-    "msw": "^2.3.0",
-    "postcss": "^8.4.38",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.11",
+    "msw": "^2.3.1",
+    "postcss": "^8.4.39",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3",
     "vite-plugin-html": "^3.2.2"
   },
   "msw": {
