--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "lesca-click": "^4.3.5",
+    "lesca-enterframe": "^1.3.1",
     "lesca-fetcher": "^1.1.7",
     "lesca-react-onload": "^1.0.18",
     "lesca-use-tween": "^3.0.8",
