--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@fullpage/react-fullpage": "^0.1.42",
     "lesca-click": "^4.3.5",
     "lesca-enterframe": "^1.3.1",
     "lesca-fetcher": "^1.1.7",
@@ -20,6 +21,7 @@
     "lesca-use-tween": "^3.0.8",
     "matter-js": "^0.20.0",
     "react": "^18.3.1",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-loading": "^2.0.3",
