--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.2.1",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.24.1"
