--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.2.1",
     "react-loading": "^2.0.3",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "swiper": "^11.1.9"
   },
   "devDependencies": {
     "@types/matter-js": "^0.19.7",
